--- a/app/src/main/res/layout/item_basic_timeline.xml
+++ b/app/src/main/res/layout/item_basic_timeline.xml
@@ -5,24 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="8dp">
+    android:paddingVertical="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
-    <View
+    <ImageView
         android:id="@+id/view_dot"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/ic_timeline_circle"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="1dp"
+        android:src="@drawable/ic_timeline_circle"
+        app:layout_constraintTop_toTopOf="@+id/card_event"
         app:layout_constraintBottom_toBottomOf="@+id/card_event"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/card_event"
-        app:layout_constraintVertical_bias="0.494" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_event"
-        android:layout_width="320dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
         app:strokeColor="@color/white"
@@ -33,7 +34,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="16dp">
 
