--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -191,28 +191,6 @@
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toEndOf="@id/ic_contact"/>
 
-            <TextView
-                android:id="@+id/tv_label_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/phone"
-                android:textSize="14sp"
-                android:fontFamily="@font/urbanist"
-                android:textColor="@color/sub_titles_text"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/ic_contact"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-            <TextView
-                android:id="@+id/tv_value_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/_972_547628936"
-                android:textSize="14sp"
-                android:textColor="@color/sub_titles_text"
-                android:fontFamily="@font/urbanist"
-                app:layout_constraintBaseline_toBaselineOf="@id/tv_label_phone"
-                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/tv_label_email"
@@ -223,7 +201,7 @@
                 android:fontFamily="@font/urbanist"
                 android:textColor="@color/sub_titles_text"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_label_phone"
+                app:layout_constraintTop_toBottomOf="@id/tv_contact_label"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
@@ -236,70 +214,6 @@
                 android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_label_email"
                 app:layout_constraintEnd_toEndOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_personal"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:strokeColor="@color/white"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true"
-        app:cardBackgroundColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/card_contact"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp">
-
-            <ImageView
-                android:id="@+id/ic_personal"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_personal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_personal_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/urbanist"
-                android:text="@string/personal_details"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/ic_personal"
-                app:layout_constraintStart_toEndOf="@id/ic_personal" />
-
-            <TextView
-                android:id="@+id/tv_label_dob"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/urbanist"
-                android:text="@string/date_of_birth"
-                android:textColor="@color/sub_titles_text"
-                android:layout_marginTop="8dp"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ic_personal" />
-
-            <TextView
-                android:id="@+id/tv_value_dob"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/urbanist"
-                android:text="@string/_12_jan_1995"
-                android:textColor="@color/sub_titles_text"
-                android:textSize="14sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/tv_label_dob"
-                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
