feat: add EditProfileFragment for user profile editing and password update functionality

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -4,18 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/overlay_background"
-    android:padding="24dp">
+    android:background="@color/overlay_background">
 
     <com.google.android.material.card.MaterialCardView
     android:id="@+id/card_change_password"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    app:cardCornerRadius="12dp"
+    app:cardCornerRadius="18dp"
     app:cardElevation="8dp"
-    app:cardBackgroundColor="@android:color/white"
-    android:padding="16dp">
+    app:cardBackgroundColor="@android:color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -119,4 +117,34 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
+
+    <FrameLayout
+        android:id="@+id/dialog_loader_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/overlay_background"
+        android:visibility="gone"
+        android:elevation="12dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"/>
+            <TextView
+                android:id="@+id/dialog_tv_loader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/changing_password_please_wait"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:layout_marginTop="16dp"/>
+        </LinearLayout>
     </FrameLayout>
+
+</FrameLayout>
