--- a/app/src/main/res/layout/item_advanced_timeline.xml
+++ b/app/src/main/res/layout/item_advanced_timeline.xml
@@ -24,8 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
