--- a/app/src/main/res/layout/item_basic_timeline.xml
+++ b/app/src/main/res/layout/item_basic_timeline.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardCornerRadius="8dp">
 
     <ImageView
         android:id="@+id/view_dot"
@@ -25,8 +24,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
