--- a/app/src/main/res/layout/class_builder_actions.xml
+++ b/app/src/main/res/layout/class_builder_actions.xml
@@ -59,9 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
         app:cardBackgroundColor="@android:color/white"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/disabled_button"
         app:layout_constraintTop_toBottomOf="@id/tv_ca_duration"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -115,8 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/card_add_pose"
         app:layout_constraintStart_toStartOf="parent"
