--- a/app/src/main/res/layout/item_pose.xml
+++ b/app/src/main/res/layout/item_pose.xml
@@ -6,14 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
     app:cardBackgroundColor="@android:color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        app:strokeColor="@color/white">
+        app:strokeColor="@color/disabled_button">
 
         <ImageView
             android:id="@+id/iv_level_mark"
