--- a/app/src/main/res/layout/main_guest.xml
+++ b/app/src/main/res/layout/main_guest.xml
@@ -37,8 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/chip_bg"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/tv_header"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,9 +91,8 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/disabled_button"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/card_class_builder"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,9 +155,8 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/chip_bg"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/card_pose_library"
         app:layout_constraintStart_toStartOf="parent"
