--- a/app/src/main/res/layout/pose_library.xml
+++ b/app/src/main/res/layout/pose_library.xml
@@ -46,9 +46,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/tv_pl_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,9 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
-
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/card_view_by_levels"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,45 +116,45 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_card_mark"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_pl_types_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="@string/view_by_types"
-                android:textSize="16sp"
                 android:fontFamily="@font/urbanist"
+                android:text="@string/view_by_types"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_pl_types"
-                app:layout_constraintStart_toEndOf="@id/ic_pl_types"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ic_pl_types" />
 
             <TextView
                 android:id="@+id/tv_pl_types_sub"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/poses_family"
-                android:textSize="14sp"
                 android:fontFamily="@font/urbanist"
+                android:text="@string/poses_family"
                 android:textColor="@color/sub_titles_text"
-                app:layout_constraintTop_toBottomOf="@id/tv_pl_types_title"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/tv_pl_types_title"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_pl_types_title" />
 
             <ImageView
                 android:id="@+id/ic_pl_types_chev"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
-                app:tint="@color/sub_titles_text"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/sub_titles_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -168,9 +164,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
-
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/card_view_by_types"
         app:layout_constraintStart_toStartOf="parent"
@@ -224,9 +218,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        app:strokeColor="@color/white"
-
+        app:strokeColor="@color/disabled_button"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/card_all_poses"
         app:layout_constraintStart_toStartOf="parent"
