feat: modify drop down item design

--- a/app/src/main/res/layout/item_dropdown_menu.xml
+++ b/app/src/main/res/layout/item_dropdown_menu.xml
@@ -1,7 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    style="?attr/textAppearanceBodyLarge"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:textColor="?attr/colorOnSurface" />
+    android:minHeight="?attr/listPreferredItemHeightSmall"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
+    android:background="@drawable/dropdown_item_bg" />
