--- a/app/src/main/res/values/styles_textfields.xml
+++ b/app/src/main/res/values/styles_textfields.xml
@@ -1,7 +1,7 @@
 <resources>
     <style name="Widget.Yogis.TextField.Outlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxBackgroundColor">@color/background_text_field</item>
-        <item name="boxStrokeColor">@color/stroke_text_field</item>
+        <item name="boxBackgroundColor">@color/white</item>
+        <item name="boxStrokeColor">@color/sub_titles_text</item>
         <item name="boxCornerRadiusTopStart">8dp</item>
         <item name="boxCornerRadiusTopEnd">8dp</item>
         <item name="boxCornerRadiusBottomStart">8dp</item>
