--- a/app/src/main/res/layout/class_builder_add_new_pose.xml
+++ b/app/src/main/res/layout/class_builder_add_new_pose.xml
@@ -49,84 +49,35 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.Yogis.TextField.Outlined"
                 android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="12dp"
+                android:hint="@string/select_yoga_type"
+                android:textColorHint="@color/sub_titles_text"
+                app:endIconMode="dropdown_menu">
+
+                <AutoCompleteTextView
+                    android:id="@+id/ac_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingStart="16dp"
+                    android:inputType="none"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.Yogis.TextField.Outlined"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="@string/pose_family"
+                android:hint="@string/duration_seconds"
                 android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_pose_family"
+                    android:id="@+id/ev_duration"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textCapWords"
                     android:enabled="true"/>
             </com.google.android.material.textfield.TextInputLayout>
-
-            <RadioGroup
-                android:id="@+id/rg_duration_vs_reps"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <com.google.android.material.radiobutton.MaterialRadioButton
-                        android:id="@+id/rb_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:buttonTint="@color/primary"
-                        android:checked="true"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.Yogis.TextField.Outlined"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="@string/duration"
-                        android:textColorHint="@color/sub_titles_text">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_duration"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="number"
-                            android:enabled="true"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="8dp">
-
-                    <com.google.android.material.radiobutton.MaterialRadioButton
-                        android:id="@+id/rb_repetitions"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:buttonTint="@color/primary"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.Yogis.TextField.Outlined"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="@string/repetitions"
-                        android:textColorHint="@color/sub_titles_text">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_repetitions"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="number"
-                            android:enabled="false"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-            </RadioGroup>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.Yogis.TextField.Outlined"
