--- a/app/src/main/res/layout/class_builder_add_pose_container.xml
+++ b/app/src/main/res/layout/class_builder_add_pose_container.xml
@@ -111,8 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/overlay_background"
-        android:visibility="gone"
-        android:elevation="10dp">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -125,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/image_is_uploading_should_take_a_few_seconds"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:layout_marginTop="24dp"
                 android:gravity="center" />
