--- a/app/src/main/res/layout/class_builder_pose_page.xml
+++ b/app/src/main/res/layout/class_builder_pose_page.xml
@@ -200,6 +200,21 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+
+    <TextView
+        android:id="@+id/tv_credits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/images_credits_2013_2025_workoutlabs_llc_all_rights_reserved"
+        android:textSize="12sp"
+        android:textColor="@color/sub_titles_text"
+        android:fontFamily="@font/urbanist"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@id/guideline_ap_action_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="8dp"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_add_pose"
         style="@style/Widget.Yogis.Button.Primary"
