hide password by default

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -55,6 +55,8 @@
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
             android:hint="@string/current_password"
+            app:endIconMode="password_toggle"
+            app:endIconDrawable="@drawable/ic_eye"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_close">
@@ -73,6 +75,8 @@
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:hint="@string/new_password"
+            app:endIconMode="password_toggle"
+            app:endIconDrawable="@drawable/ic_eye"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_current">
@@ -91,6 +95,8 @@
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:hint="@string/verify_new_password"
+            app:endIconMode="password_toggle"
+            app:endIconDrawable="@drawable/ic_eye"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_new">
